--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/jquery.mb.YTPlayer.min.css">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
@@ -161,7 +162,7 @@
     <!-- pie chart end -->
     <!-- aos 2 js start -->
     <section>
-        <div class="container mt-4">
+        <div class="container mt-4 overflow-hidden">
             <h1 class="bg-dark text-light text-center p-3 my-3">AOS js</h1>
             <div class="row ">
                 <div class="col-md-6 offset-md-6 mb-4" data-aos="zoom-in">
@@ -186,6 +187,10 @@
         </div>
     </section>
     <!-- aos 2 js end -->
+
+    <section class="banner" id="bgndVideo" class="player"  
+                data-property="{videoURL:'http://youtu.be/BsekcY04xvQ'}">                     
+    </section>
     
 
     <!-- js files -->
@@ -195,6 +200,7 @@
     <script src="js/typed.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/jquery.mb.YTPlayer.min.js"></script>
 
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
