slick slider added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/jquery.mb.YTPlayer.min.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
@@ -69,7 +71,7 @@
         </div>
     </section>
     <!-- COUNTER end -->
-    
+
     <h3>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, modi illo! Tempora aliquid atque unde quis id
         praesentium repellat deserunt pariatur deleniti voluptatum fuga reiciendis vel, cum molestiae neque rerum ipsam
@@ -102,13 +104,13 @@
                 <div class="col-md-4 mb-4 wow fadeInDown" data-wow-delay="3s">
                     <img class="img-fluid" src="img/recent-work-3.jpg" alt="">
                 </div>
-                <div class="col-md-4 mb-4 wow fadeInUp"  data-wow-delay="4s">
+                <div class="col-md-4 mb-4 wow fadeInUp" data-wow-delay="1s">
                     <img class="img-fluid" src="img/recent-work-3.jpg" alt="">
                 </div>
-                <div class="col-md-4 mb-4 wow fadeInUp" data-wow-delay="5s">
+                <div class="col-md-4 mb-4 wow fadeInUp" data-wow-delay="2s">
                     <img class="img-fluid" src="img/recent-work-1.jpg" alt="">
                 </div>
-                <div class="col-md-4 mb-4 wow fadeInUp" data-wow-duration="1s" data-wow-delay="6s">
+                <div class="col-md-4 mb-4 wow fadeInUp" data-wow-delay="3s">
                     <img class="img-fluid" src="img/recent-work-2.jpg" alt="">
                 </div>
             </div>
@@ -124,36 +126,40 @@
                     <div class="single-circle">
                         <svg class="radial-progress" data-percentage="82" viewBox="0 0 80 80">
                             <circle class="incomplete" cx="40" cy="40" r="35"></circle>
-                            <circle class="complete" cx="40" cy="40" r="35" style="stroke-dashoffset: 39.58406743523136;"></circle>
+                            <circle class="complete" cx="40" cy="40" r="35"
+                                style="stroke-dashoffset: 39.58406743523136;"></circle>
                             <text class="percentage" x="50%" y="57%" transform="matrix(0, 1, -1, 0, 80, 0)">82%</text>
-                          </svg>
+                        </svg>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="single-circle">
                         <svg class="radial-progress" data-percentage="50" viewBox="0 0 80 80">
                             <circle class="incomplete" cx="40" cy="40" r="35"></circle>
-                            <circle class="complete" cx="40" cy="40" r="35" style="stroke-dashoffset: 39.58406743523136;"></circle>
+                            <circle class="complete" cx="40" cy="40" r="35"
+                                style="stroke-dashoffset: 39.58406743523136;"></circle>
                             <text class="percentage" x="50%" y="57%" transform="matrix(0, 1, -1, 0, 80, 0)">50%</text>
-                          </svg>
+                        </svg>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="single-circle">
                         <svg class="radial-progress" data-percentage="96" viewBox="0 0 80 80">
                             <circle class="incomplete" cx="40" cy="40" r="35"></circle>
-                            <circle class="complete" cx="40" cy="40" r="35" style="stroke-dashoffset: 39.58406743523136;"></circle>
+                            <circle class="complete" cx="40" cy="40" r="35"
+                                style="stroke-dashoffset: 39.58406743523136;"></circle>
                             <text class="percentage" x="50%" y="57%" transform="matrix(0, 1, -1, 0, 80, 0)">96%</text>
-                          </svg>
+                        </svg>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="single-circle">
                         <svg class="radial-progress" data-percentage="27" viewBox="0 0 80 80">
                             <circle class="incomplete" cx="40" cy="40" r="35"></circle>
-                            <circle class="complete" cx="40" cy="40" r="35" style="stroke-dashoffset: 39.58406743523136;"></circle>
+                            <circle class="complete" cx="40" cy="40" r="35"
+                                style="stroke-dashoffset: 39.58406743523136;"></circle>
                             <text class="percentage" x="50%" y="57%" transform="matrix(0, 1, -1, 0, 80, 0)">27%</text>
-                          </svg>
+                        </svg>
                     </div>
                 </div>
             </div>
@@ -187,11 +193,34 @@
         </div>
     </section>
     <!-- aos 2 js end -->
-
-    <section class="banner" id="bgndVideo" class="player"  
-                data-property="{videoURL:'http://youtu.be/BsekcY04xvQ'}">                     
+    <!-- YTPlayer start  -->
+    <section class="banner" id="bgndVideo" class="player" data-property="{videoURL:'http://youtu.be/BsekcY04xvQ'}">
     </section>
-    
+    <!--  YTPlayer end  -->
+    <!-- slick slider -->
+    <section class="my-5 ">
+        <div class="container">
+            <h1 class="bg-dark text-light text-center p-3 my-3">Slick Slider</h1>
+            <div class="slick">
+                <div class="single-news">
+                    <img class="img-fluid" src="img/recent-work-1.jpg" alt="">
+                </div>
+                <div class="single-news">
+                    <img class="img-fluid" src="img/recent-work-2.jpg" alt="">
+                </div>
+                <div class="single-news">
+                    <img class="img-fluid" src="img/recent-work-3.jpg" alt="">
+                </div>
+                <div class="single-news">
+                    <img class="img-fluid" src="img/recent-work-2.jpg" alt="">
+                </div>
+                <div class="single-news">
+                    <img class="img-fluid" src="img/recent-work-3.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- slick slider -->
 
     <!-- js files -->
     <script src="js/jquery-3.6.0.min.js"></script>
@@ -201,6 +230,7 @@
     <script src="js/wow.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/jquery.mb.YTPlayer.min.js"></script>
+    <script src="js/slick.min.js"></script>
 
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
